# NASADIYA-LIGHTCONE

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  DATA_POLICY.md  Makefile  README.md  SECURITY.md  about.html  community.html  data.html  index.html  methods.html  package.json  pyproject.toml  requirements.txt  site.webmanifest  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
analysis/: fidelity_note.txt
data/: README.md
docs/: architecture.md  available-survey-stack.md  banner-prompt.md  community-roadmap.md  dashboard-interaction.md  data-access.md  desi-adaptive-tiles.md  desi-analysis-suite.md  desi-dr1-research-bundle-v1.md  evidence-poster-workflow.md  frontend-v1.md  full-gpu-cloud.md  getlayers-creative-brief.md  getting-started.md  high-density-rendering.md  multisurvey-ingestion.md  next-survey-build.md  publication-evidence-workflow.md  publish-full-cloud-pages.md  research-mode.md  roadmap.md  science-first-analysis.md  scientific-scope.md  sources.md  ui-ux-seo-audit-v1.md
figures/: .gitkeep  desi_dr1_lss_research_summary.json
notebooks/: DESI_DR1_LSS_3D_Colab.ipynb  DESI_DR1_LSS_Catalogue_Analysis.ipynb  DESI_DR1_LSS_Catalogue_Diagnostics_Report.md  DESI_DR1_LSS_Random_Catalogue_Workflow.md  DESI_DR1_Publication_Evidence_Colab.ipynb  DESI_DR1_Publication_Evidence_Colab.py  DESI_DR1_Science_Analysis_Colab.md  README.md
report/: NASADIYA_LIGHTCONE_Project_Report.tex  README.md  references.bib
scripts/: analyze_desi_catalogue.py  analyze_desi_dr1_science.py  assess_desi_browser_sample.py  assess_desi_common.py  assess_desi_metrics.py  build_2mpz_tile_store.py  build_2mrs_lightcone.py  build_desi_dr1_tile_store.py  build_desi_evidence_poster.py  build_desi_publication_figures.py  build_desi_research_bundle.py  build_gaia_dr3_local_sample.py  build_photoz_tile_store.py  build_survey_tile_store.py  build_wise_sc_tile_store.py  desi_eval_cli.py  desi_lss_random_preflight.py  desi_strata.py  download_2mpz.py  download_2mrs.py  download_desi_dr1_lss.py  download_gaia_dr3_local.py  download_vizier_photoz.py  download_wise_sc.py  eval.py  fidelity_grid.py  fidelity_helpers.py  full_gpu.py  inspect_catalog.py  plot_desi_research_figure.py  probe_gcns_source.py  (+4 more)
src/: app.js  (+2 more)
(+4286 files in other folders)
