[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nasadiya-lightcone"
version = "1.3.0"
description = "Survey-native 3D lightcone tools for NĀSADĪYA LIGHTCONE"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Biswajit Jana"}]
dependencies = [
  "astropy>=6.0",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=17.0",
  "matplotlib>=3.8",
  "astroquery>=0.4.10",
  "requests>=2.32",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8"]

[tool.setuptools.packages.find]
where = ["pipeline"]

[tool.pytest.ini_options]
pythonpath = ["pipeline"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
ignore = ["E501"]
